--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,14 @@ material = "1.11.0"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
 daggerHilt = "2.48"
+navigation = "2.7.7"
+lifecycleKtx = "2.7.0"
+activityKtx = "1.9.0"
+fragmentKtx = "1.6.2"
+retrofit = "2.11.0"
+okhttp3 =  "4.9.0"
+gson = "2.8.8"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -20,13 +28,26 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+
+navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation"}
+navigation-safe-args-gradle-plugin = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "navigation" }
+navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation"}
+lifecycle-livedata =  { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleKtx"}
+lifecycle-viewmodel =  { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleKtx"}
+lifecycle-runtime =  { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleKtx"}
+activity-ktx =  { group = "androidx.activity", name = "activity-ktx", version.ref = "activityKtx"}
+fragment-ktx =  { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx"}
 dagger-hilt-android =  { group = "com.google.dagger", name = "hilt-android", version.ref = "daggerHilt"}
 dagger-hilt-android-compiler =  { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "daggerHilt"}
+squareup-retrofit2-retrofit =  { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit"}
+squareup-retrofit2-converter-gson =  { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit"}
+squareup-okhttp3 =  { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp3"}
+squareup-gson =  { group = "com.google.code.gson", name = "gson", version.ref = "gson"}
+
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 daggerHilt = { id = "com.google.dagger.hilt.android", version.ref = "daggerHilt" }
-daggerHiltAndroid = { id = "com.google.dagger.hilt.android"}
-#id("com.google.dagger.hilt.android")
 
