feat(data): create data class for genshin characters api

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,24 @@
 [versions]
-agp = "8.3.0"
-kotlin = "1.9.0"
-coreKtx = "1.12.0"
+agp = "8.3.2"
+kotlin = "1.9.23"
+coreKtx = "1.13.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 appcompat = "1.6.1"
 material = "1.11.0"
-activity = "1.8.0"
+activity = "1.9.0"
 constraintlayout = "2.1.4"
-daggerHilt = "2.48"
+daggerHilt = "2.49"
 navigation = "2.7.7"
 lifecycleKtx = "2.7.0"
 activityKtx = "1.9.0"
 fragmentKtx = "1.6.2"
 retrofit = "2.11.0"
 okhttp3 =  "4.9.0"
-gson = "2.8.8"
+gson = "2.10.1"
+room = "2.6.1"
+ksp = "1.9.23-1.0.20"
 
 
 [libraries]
@@ -43,11 +45,12 @@ squareup-retrofit2-retrofit =  { group = "com.squareup.retrofit2", name = "retro
 squareup-retrofit2-converter-gson =  { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit"}
 squareup-okhttp3 =  { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp3"}
 squareup-gson =  { group = "com.google.code.gson", name = "gson", version.ref = "gson"}
-
-
+androidx-room =  { group = "androidx.room", name = "room-runtime", version.ref = "room"}
+androidx-room-ktx =  { group = "androidx.room", name = "room-ktx", version.ref = "room"}
+androidx-room-compiler =  { group = "androidx.room", name = "room-compiler", version.ref = "room"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 daggerHilt = { id = "com.google.dagger.hilt.android", version.ref = "daggerHilt" }
-
+ksp = {id = "com.google.devtools.ksp", version.ref = "ksp"}
